samples/_failures_safe/1761214609_7af7b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2378060.c: In function ‘main’:
./samples/SAFE/__tmp_e2378060.c:168:5: error: expected declaration or statement at end of input
  168 |     char input[1024];
      |     ^~~~
